--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js" integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- SWIPER -->
-    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
-    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-    
+    <link rel="stylesheet" href="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.css" />
+    <script src="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.js"></script>
     <script defer src="./js/main.js"></script>
 </head>
 <body>
@@ -402,25 +401,51 @@
         </div>
     </section>
 
+    <!--NOTICE-->
     <section class="notice">
 
+      <!--NOTICE LINE-->
       <div class="notice-line">
         <div class="bg-left"></div>
         <div class="bg-right"></div>
         <div class="inner">
+
           <div class="inner__left">
             <h2>공지사항</h2>
-            <div class="swiper-container"></div>
+            <div class="swiper-container">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <a href="javascript:void(0)">크리스마스 & 연말연시 스타벅스 매장 영업시간 변경 안내</a>
+                </div>
+                <div class="swiper-slide">
+                  <a href="javascript:void(0)">[당첨자 발표] 2021 스타벅스 플래너 영수증 이벤트</a>
+                </div>
+                <div class="swiper-slide">
+                  <a href="javascript:void(0)">스타벅스커피 코리아 애플리케이션 버전 업데이트 안내</a>
+                </div>
+                <div class="swiper-slide">
+                  <a href="javascript:void(0)">[당첨자 발표] 뉴이어 전자영수증 이벤트</a>
+                </div>
+              </div>
+            </div>
             <a href="javascript:void(0)" class="notice-line__more">
-              <div class="material-icons">add_circle</div>
+              <span class="material-icons">add_circle</span>
             </a>
           </div>
+
           <div class="inner__right">
             <h2>스타벅스 프로모션</h2>
-            <div class="toggle-promotion">
+            <div class="toggle-promotion open">
               <div class="material-icons">upload</div>
             </div>
           </div>
+
+        </div>
+      </div>
+      
+      <div class="promotion">
+        <div class="swiper-container">
+          TEST
         </div>
       </div>
 
