--- a/index.html
+++ b/index.html
@@ -551,7 +551,17 @@
     </div>
   </section>
 
-  <!--  -->
-</body>
+  <!-- PICK YOUR FAVORITE -->
+  <section class="pick-your-favorite">
+    <div class="inner">
 
+      <div class="text-group">
+        
+
+      </div>
+
+    </div>
+
+  </section>
+</body>
 </html>
