--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <link rel="stylesheet" href="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.css" />
   <script src="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.js"></script>
 
-  <!-- <script defer src="./js/youtube.js"></script> -->
+  <script defer src="./js/youtube.js"></script>
   <script defer src="./js/main.js"></script>
 </head>
 
@@ -556,12 +556,32 @@
     <div class="inner">
 
       <div class="text-group">
-        
-
+        <img src="./images/favorite_text1.png" alt="" class="title">
+        <img src="./images/favorite_text2.png" alt="" class="description">
+        <div class="more">
+          <a href="javascript:void(0)" class="btn btn--white">자세히 보기</a>
+        </div>
       </div>
 
     </div>
-
   </section>
+
+  <!-- RESERVE STORE -->
+  <section class="reserve-store">
+    <div class="inner">
+
+      <div class="medal">
+        <div class="front">
+          <img src="./images/reserve_store_medal_front.png" alt="" />
+        </div>
+        <div class="back">
+          <img src="./images/reserve_store_medal_back.png" alt="" />
+          <a href="javascript:void(0)" class="btn">매징안내</a>
+        </div>
+      </div>
+
+    </div>
+  </section>
+  
 </body>
 </html>
